# Matrices

./: .gitignore  LICENSE  pyproject.toml  setup.cfg  setup.py  test.py
.github/workflows/: publish_matrices.yml  pylint.yml
src/: Matrix.py  __init__.py  p_error_config.py
src/extra/: INTERPOLATION_.py
src/pyMatrix/: matrix.py
src/pyMatrix/__backend/: custom_exceptions_.py
src/subclasses/: DETERMINANT_.py  EXCEPTIONS_.py  FRACTION_.py  INVERSE_.py  MATRIX.py  MatrixBaseClass.py
src/subclasses/solvers/: GaussJacobi.py  GaussSeidel.py  ITERATIVE_SOLVER_.py
src/subclasses/specials/: IDENTITY_.py
src/umatrix/: __init__.py  matrix.py
src/umatrix/__backend/: __init__.py
test/: __init__.py  test_Matrix.py
