[metadata]
name = umatrix
version = 0.1.3
url = https://github.com/syedalimohsinbukhari/Matrices
author = Syed Ali Mohsin Bukhari, Astrophysics and Python
author_email = syedali.b@outlook.com, astrophysicsandpython@gmail.com
license = MIT
license_files = LICENSE
description = ''
long_description = file: README.md
long_description_content_type = "text/markdown"

[options]
package_dir =
    = src

packages = find:
python_requires = ">= 3.9"

install_requires =
    setuptools

[options.packages.find]
where = src

classifiers =
    License :: OSI Approved :: CC License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
